syntax = "proto3";

option go_package = ".";

//protoc wallet.proto --go_out=. --go-grpc_out=.
service WalletService {
  rpc CreateWallet (CreateWalletData) returns (WalletInfo) {}
  rpc CreateMnemonic (CreateMnemonicData) returns (MnemonicInfo) {}
}

message CreateWalletData {
  string walletName = 1;
  optional string mnemonic = 2;
}

message CreateMnemonicData {
  string mnemonicLength = 1;
  string language = 2;
}

message Wallet {
  string mnemonic = 1;
  string coinName = 2;
  string address = 3;
  string private = 4;
}

message WalletInfo {
  Wallet wallet = 1;
}

message MnemonicInfo {
  string mnemonic = 1;
}